--- a/echo_src/platformio.ini
+++ b/echo_src/platformio.ini
@@ -13,12 +13,20 @@ platform = atmelsam
 board = adafruit_itsybitsy_m4
 framework = arduino
 ; 20ms record time
-build_flags = -D N_ADC_SAMPLES=16000
+build_flags = -D N_ADC_SAMPLES=20000
 ; 40ms record time
 ;build_flags = -D N_ADC_SAMPLES=33000
 ; 50ms record time
 ;build_flags = -D N_ADC_SAMPLES=42000
 
+
+[env:IBM4_1ADC]
+platform = atmelsam
+board = adafruit_itsybitsy_m4
+framework = arduino
+build_flags = 
+             -D N_ADC_SAMPLES=16000 
+             -D N_1ADC
 
 [env:IBM4_hard_trig]
 platform = atmelsam
