--- a/echo_src/platformio.ini
+++ b/echo_src/platformio.ini
@@ -13,7 +13,9 @@ platform = atmelsam
 board = adafruit_itsybitsy_m4
 framework = arduino
 ; 20ms record time
-build_flags = -D N_ADC_SAMPLES=20000
+build_flags = 
+            -D N_ADC_SAMPLES=20000
+            -D N_DAC_SAMPLES=6000
 ; 40ms record time
 ;build_flags = -D N_ADC_SAMPLES=33000
 ; 50ms record time
@@ -25,8 +27,11 @@ platform = atmelsam
 board = adafruit_itsybitsy_m4
 framework = arduino
 build_flags = 
-             -D N_ADC_SAMPLES=16000 
+             -D N_ADC_SAMPLES=30000 
              -D N_1ADC
+             -D N_DAC_SAMPLES=5000
+             -D N_DAC_TIMER=160
+             -D N_WAIT_TIMER=2
 
 [env:IBM4_hard_trig]
 platform = atmelsam
